added local material icons font, set webpack.config to handle fonts, added css reset and material icons font-family, fixed todo priority bug (was always Low)

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <title>Todo List</title>
   </head>
   <body>
-    <button id="create-cta">Create</button>
+    <header>Todo Voodoo</header>
+    <button id="create-cta"><i class="material-icons-rounded">add</i>Create</button>
     <div id="dialog-placeholder"></div>
   </body>
 </html>
