--- a/src/dialog.html
+++ b/src/dialog.html
@@ -12,7 +12,7 @@
       </div>
       <div class='form-item'>
         <label for='due-date'>Due Date</label>
-        <input id='due-date' name='due-date' type='number' min='1' required/>
+        <input id='due-date' name='due-date' type='date' required/>
       </div>
       <div class="custom-select">
         <!-- <label for='read-status'>Read Status: -->
