--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,15 @@
   </head>
   <body>
     <header>Todo Voodoo</header>
-    <button id="create-cta"><i class="material-icons-rounded">add</i>Create</button>
+    <div class="content-wrap">
+      <nav>
+        <h1>Projects</h1>
+      </nav>
+      <main>
+        <h1>Project Name</h1>
+        <button id="create-cta"><i class="material-icons-rounded">add</i>Create</button>
+      </main>
+    </div>
     <div id="dialog-placeholder"></div>
   </body>
 </html>
