start refactoring with todos renamed as tasks, default due date, description as textentry and cta styling

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
       </nav>
       <main>
         <h1>Project Name</h1>
-        <button id="create-cta"><i class="material-icons-rounded">add</i>Create</button>
+        <button id="create-cta"><i class="material-icons-rounded">add</i>Add Task</button>
       </main>
     </div>
-    <div id="dialog-placeholder"></div>
+    <div id="task-dialog-placeholder"></div>
   </body>
 </html>
