--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>Todo Voodoo</header>
-    <div class="content-wrap">
+    <div class="content">
       <nav role="tablist" aria-label="Main Menu">
         <button id="all-btn" role="tab" aria-selected="true"><i class="material-icons-rounded">inbox</i>All tasks</button>
         <button id="today-btn" role="tab" aria-selected="false"><i class="material-icons-rounded">today</i>Today</button>
@@ -14,7 +14,7 @@
         <h1>Projects</h1>
       </nav>
       <main>
-        <h1>Project Name</h1>
+        <h1 id="main-header">Project Name</h1>
         <button id="create-cta"><i class="material-icons-rounded">add</i>Add Task</button>
         <section id="tasklist"></section>
       </main>
