refactor manual project creation with json parsed projects, fixed tab button material icon innerText leaking into button innerText

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       <nav role="tablist" aria-label="Main Menu">
         <button id="all-btn" role="tab" aria-selected="true"><i class="material-icons-rounded">inbox</i>All tasks</button>
         <button id="today-btn" role="tab" aria-selected="false"><i class="material-icons-rounded">today</i>Today</button>
-        <button id="week-btn" role="tab" aria-selected="false"><i class="material-icons-rounded">date_range</i>7 Days</button>
+        <button id="week-btn" role="tab" aria-selected="false"><i class="material-icons-rounded">date_range</i>7 days</button>
         <h1>Projects</h1>
       </nav>
       <main>
