ProjectLibrary object constructor

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,6 @@
         <section id="tasklist"></section>
       </main>
     </div>
-    <div id="task-dialog-placeholder"></div>
+    <div id="dialog-placeholder"></div>
   </body>
 </html>
