user projects tabs display

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
           <button id="week-btn" role="tab" aria-selected="false"><i class="material-icons-rounded">date_range</i>7 days</button>
         </section>
         
-        <section>
+        <section id="user-projects">
           <header id="menu-header"><h1>Projects</h1><button id="add-project"><span class="material-icons-rounded">add</span></button></header>
         </section>
       </nav>
