projectDialog selects and draw tasks of new project, caching #main-header to separate header update from task list redraw, removed headerText parameter of drawTaskList

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         </section>
       </nav>
       <main>
-        <h1 id="main-header">Project Name</h1>
+        <h1 id="main-header">All Tasks</h1>
         <button id="create-cta"><i class="material-icons-rounded">add</i>Add Task</button>
         <section id="tasklist"></section>
       </main>
