nav buttons switch case now with data-id, moved setAddTaskButtonState to uiStateManager

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
     <div class="content">
       <nav role="tablist" aria-label="Main Menu">
         <section>
-          <button id="all-btn" role="tab" aria-selected="true"><i class="material-icons-rounded">inbox</i><span class="tab-text">All tasks</span></button>
-          <button id="today-btn" role="tab" aria-selected="false"><i class="material-icons-rounded">today</i><span class="tab-text">Today</span></button>
-          <button id="week-btn" role="tab" aria-selected="false"><i class="material-icons-rounded">date_range</i><span class="tab-text">7 days</span></button>
+          <button data-id="all-tab" role="tab" aria-selected="true"><i class="material-icons-rounded">inbox</i><span class="tab-text">All tasks</span></button>
+          <button data-id="today-tab" role="tab" aria-selected="false"><i class="material-icons-rounded">today</i><span class="tab-text">Today</span></button>
+          <button data-id="week-tab" role="tab" aria-selected="false"><i class="material-icons-rounded">date_range</i><span class="tab-text">7 days</span></button>
         </section>
         
         <section id="user-projects">
