--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         </section>
         
         <section id="user-projects">
-          <header id="menu-header"><h1>Projects</h1><button id="add-project"><span class="material-icons-rounded">add</span></button></header>
+          <header id="menu-header"><h1>Projects</h1><button id="add-project" aria-label="add new project"><span class="material-icons-rounded">add</span></button></header>
         </section>
       </nav>
       <main>
