--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Todo List</title>
   </head>
   <body>
-    <header id="app-header">Todo Voodoo</header>
+    <header id="app-header"><i class="material-icons-rounded">inventory</i>Todo Voodoo</header>
     <div class="content">
       <nav role="tablist" aria-label="Main Menu">
         <section>
